angular-frontend/src/app/components/navbar/navbar.component.css
/*#basicNav {*/
/*    background-color: gainsboro;*/
/*}*/
.app_container {
    margin-top: 56px;
    padding: 24px;
}

.menu-spacer {
    flex: 1 1 auto;
}

.mat-button:hover{
    background-color: #d4d4d4;
    color: black;
}

a.mat-list-item.active a.mat-button.active{
    color: #021f09 !important; /* Note: You could also use a custom theme */
    background: #78b886 !important;
}

.time{
    text-align:center;
}

.clock{
    font-size: xx-large;
}

.footer{
    overflow: hidden;
    position: absolute;
    position: -webkit-sticky; /* For macOS/iOS Safari */
    bottom: 0; /* Sets the sticky toolbar to be on top */
    z-index: 1000;
    /*box-shadow:2px 0px 20px rgb(40,253,0), 2px 0px 20px rgb(18,168,6);*/
}
.header{
    overflow: hidden;
    position: sticky;
    position: -webkit-sticky; /* For macOS/iOS Safari */
    top: 0; /* Sets the sticky toolbar to be on top */
    z-index: 1000;
    margin: 0;
    /*box-shadow:2px 0px 20px rgb(40,253,0), 2px 0px 20px rgb(18,168,6);*/
}

.sidenav-container{
    position: absolute;
    overflow: hidden;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

/*

.sidenav {
    height: 100%;
    width: 160px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #3FB0AC;
    overflow-x: hidden;
    padding-top: 20px;
}

.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 25px;
    color: white;
    display: block;
    border-radius: 15px 50px 30px;

}

.sidenav a:hover {
    background-color: #173e43;
}

.navbar {
    margin-left: 160px;
}

.navbar a{
    color: #17252a;
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 25px;
    display: block;
    border-radius: 15px 50px 30px;
}

.navbar a:hover{
    background-color: #3AAFA9;
}

*/

